--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
-        <title>Hello, world!</title>
+        <title>PassMan</title>
     <style>
     #d1{
       height: 665px;
@@ -48,14 +48,23 @@
       <div id="d1">
         <div class="jumbotron jumbotron-fluid bg-dark">
           <h1 class="display-4">Pass_Man</h1>
-          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <p class="lead">This is simple web app to manage your passwords.</p>
         </div>
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
           <div class="btn-group mr-2" role="group" aria-label="Second group">
             <a id="bt1" type="button" class="btn btn-secondary" href="/signUp">Sign Up</a>
           </div>
           <div class="btn-group" role="group" aria-label="Third group">
-            <a id="bt2" type="button" class="btn  btn-secondary pull-left" href="/logIn">Login</a>
+            <a id="bt2" type="button" class="btn  btn-secondary pull-left" href="#">Login</a>
+          </div>
+          <div class="btn-group mr-2" role="group" aria-label="Second group">
+            <a id="bt3" type="button" class="btn btn-secondary" href="/getpass">Get passwords</a>
+          </div>
+          <div class="btn-group mr-2" role="group" aria-label="Second group">
+            <a id="bt4" type="button" class="btn btn-secondary" href="/addpass">Add password</a>
+          </div>
+          <div class="btn-group mr-2" role="group" aria-label="Second group">
+            <a id="bt5" type="button" class="btn btn-secondary" href="/genpass">Generate new Password</a>
           </div>
         </div>
       </div>
