--- a/views/addpass.ejs
+++ b/views/addpass.ejs
@@ -11,17 +11,21 @@
     <title>PassMan</title>
   </head>
   <body>
-    <h1>Get All of Your Saved Passwords</h1>
-    <form method="POST" action='/mainpage/passwords/getallpass'>
+    <h1>Add new password</h1>
+    <form method="POST" action='/mainpage/passwords/add'>
         <div class="form-group">
-          <label for="emailId">Email</label>
-          <input type="email" class="form-control" id="emailId" name="emailId" placeholder="email">
+            <label for="email">Your Email</label>
+            <input type="email" class="form-control" id="emailId" name="emailId" placeholder="email">
+          </div>
+        <div class="form-group">
+          <label for="key">Name of password</label>
+          <input type="text" class="form-control" id="key" name="key" placeholder="key">
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" name="password">
+          <label for="value">Value</label>
+          <input type="password" class="form-control" name="value">
         </div>
-        <button type="submit" class="btn btn-primary">Log-In</button>
+        <button type="submit" class="btn btn-primary">Add</button>
       </form>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
