--- a/views/signInForm.ejs
+++ b/views/signInForm.ejs
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>PassMan</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Sign Up</h1>
     <form method="POST">
         <div class="form-row">
           <div class="form-group col-md-6">
