--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,23 +48,21 @@
       <div id="d1">
         <div class="jumbotron jumbotron-fluid bg-dark">
           <h1 class="display-4">Pass_Man</h1>
-          <p class="lead">This is simple web app to manage your passwords.</p>
+          <p class="lead">This is simple website to manage your passwords.</p>
+          <p class="lead">Simplify untangable work of remembering passwords of tons of platforms and also generate highly random and secure password.</p>
         </div>
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
           <div class="btn-group mr-2" role="group" aria-label="Second group">
             <a id="bt1" type="button" class="btn btn-secondary" href="/signUp">Sign Up</a>
           </div>
-          <div class="btn-group" role="group" aria-label="Third group">
-            <a id="bt2" type="button" class="btn  btn-secondary pull-left" href="#">Login</a>
+          <div class="btn-group mr-2" role="group" aria-label="Second group">
+            <a id="bt3" type="button" class="btn btn-info" href="/getpass">Get passwords</a>
           </div>
           <div class="btn-group mr-2" role="group" aria-label="Second group">
-            <a id="bt3" type="button" class="btn btn-secondary" href="/getpass">Get passwords</a>
+            <a id="bt4" type="button" class="btn btn-primary" href="/addpass">Add password</a>
           </div>
           <div class="btn-group mr-2" role="group" aria-label="Second group">
-            <a id="bt4" type="button" class="btn btn-secondary" href="/addpass">Add password</a>
-          </div>
-          <div class="btn-group mr-2" role="group" aria-label="Second group">
-            <a id="bt5" type="button" class="btn btn-secondary" href="/genpass">Generate new Password</a>
+            <a id="bt5" type="button" class="btn btn-success" href="/genpass">Generate new Password</a>
           </div>
         </div>
       </div>
