--- a/views/addpass.ejs
+++ b/views/addpass.ejs
@@ -7,26 +7,51 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <style>
+      body{
+        background-image: linear-gradient(to right, rgb(14, 10, 247) , rgb(8, 197, 245))
+      }
+      .form-div{
+        width:35%;
+        margin-left: 30%;
+        border-style: solid;
+        border-width: 3px;
+        border-radius: 10px;
+      }
+      h1{
+        margin-left: 35%;
+        margin-top: 2%;
+        margin-bottom: 4%;
+    
+      }
+      .btn{
+        margin-left: 40%;
+        margin-bottom: 10%;
+      }
+      
+  
+      </style>
     <title>PassMan</title>
   </head>
   <body>
     <h1>Add new password</h1>
+    <div class="form-div">
     <form method="POST" action='/mainpage/passwords/add'>
         <div class="form-group">
-            <label for="email">Your Email</label>
+            <label for="email"><h4>Your Email</h4></label>
             <input type="email" class="form-control" id="emailId" name="emailId" placeholder="email">
           </div>
         <div class="form-group">
-          <label for="key">Name of password</label>
+          <label for="key"><h4>Password Name</h4></label>
           <input type="text" class="form-control" id="key" name="key" placeholder="key">
         </div>
         <div class="form-group">
-          <label for="value">Value</label>
+          <label for="value"><h4>Value</h4></label>
           <input type="password" class="form-control" name="value">
         </div>
         <button type="submit" class="btn btn-primary">Add</button>
       </form>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
