--- a/views/logInForm.ejs
+++ b/views/logInForm.ejs
@@ -7,7 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>
+    <i class="fab fa-asymmetrik"></i>
+     <style>
     body{
       background-image: linear-gradient(to right, rgb(14, 10, 247) , rgb(8, 197, 245))
     }
