--- a/views/generatedPass.ejs
+++ b/views/generatedPass.ejs
@@ -8,8 +8,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <i class="fab fa-asymmetrik"></i>
-    <title>Hello, world!</title>
+    <link
+    rel="icon"
+    href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Asterisk.svg/819px-Asterisk.svg.png"
+  />
+    <title> PassMan</title>
     <style>
         body{
          background-image: linear-gradient(to right, rgb(40, 79, 252) , rgb(8, 197, 245))
