--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,11 @@
     
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <i class="fab fa-asymmetrik"></i>
-        <title>PassMan</title>
+        <link
+      rel="icon"
+      href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Asterisk.svg/819px-Asterisk.svg.png"
+    />
+      <title> PassMan</title>
     <style>
     #d1{
       height: 665px;
