--- a/views/generatedPass.ejs
+++ b/views/generatedPass.ejs
@@ -33,7 +33,7 @@
     </style>
   </head>
   <body>
-    <h2>PassMan Generated For You</h2>
+    <h2>PassMan Generated a Pass For You</h2>
     <div class="jumbotron">
       <h1 class="display-4">Password --> "<strong><%- password %></strong>"</h1>
       <p class="lead">Above is the 12 character long Random password that contains 3 lower case alphabets,3 upper case alphabets, 3 special symbols and 3 numbers.</p>
