--- a/views/generatedPass.ejs
+++ b/views/generatedPass.ejs
@@ -23,9 +23,10 @@
             background-color: brown;
         }
         h2{
-          margin-left: 35%;
+          margin-left: 33%;
           margin-top:1%;
           margin-bottom: 1%;
+          font-size:2.9vw;
         }
         .card{
       background-color: rgb(90, 210, 247);
