--- a/views/home.ejs
+++ b/views/home.ejs
@@ -67,6 +67,9 @@
           <div class="btn-group mr-2" role="group" aria-label="Second group">
             <a id="bt5" type="button" class="btn btn-success" href="/genpass">Generate new Password</a>
           </div>
+          <div class="btn-group mr-2" role="group" aria-label="Second group">
+            <a id="bt5" type="button" class="btn btn-success" href="/genCustom">Generate Custom Password</a>
+          </div>
         </div>
       </div>
       
