--- a/views/generatedPass.ejs
+++ b/views/generatedPass.ejs
@@ -42,7 +42,8 @@
   <body>
     <h2>PassMan Generated a Pass For You</h2>
     <div class="jumbotron">
-      <h1 class="display-4">Password --> "<strong><%- password %></strong>"</h1>
+      <h1 class="display-4">Password --> "<span id="copyText"><strong><%- password %></strong></span>"</h1>
+      <input type="button"  class="btn btn-primary" onclick="copyLink()" data-toggle="tooltip" title="Copy to Clipboard" value="Copy" readonly />
       <p class="lead">Above is the <%- length %> character long Random password that contains <%- NoAlphaS %> lower case alphabets,<%- NoAlphaL %> upper case alphabets, <%- NoSpecialCh %> special symbols and <%- NoNum %> numbers.</p>
       <hr class="my-4">
       <p>You can copy the above password to use it.</p>
@@ -56,4 +57,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
+  <script>
+    function copyLink() {
+      let copyText = document.getElementById("copyText") 
+  
+      var selection = window.getSelection();
+  
+      var range = document.createRange();
+  
+      range.selectNodeContents(copyText);
+  
+      selection.removeAllRanges();
+  
+      selection.addRange(range);
+  
+      document.execCommand('copy');
+    }
+  </script>
 </html>
