--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,6 +43,12 @@
       border: #00c853
 
       }
+      #about{
+        background-color: #f7ef9e;
+        width: 100%;
+        max-height: max-content;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -72,6 +78,7 @@
           </div>
         </div>
       </div>
+      <div id="about" class="container-fluid"><h4>About</h4>This website is created to help people to manage their passwords by providing facilities like storing their passwords, generating random passwords and custom random passowrds and reading back the saved password easily. </div>
       
 
   </body>
