--- a/views/logInForm.ejs
+++ b/views/logInForm.ejs
@@ -14,7 +14,7 @@
     <title> PassMan</title>
      <style>
     body{
-      background-image: linear-gradient(to right, rgb(14, 10, 247) , rgb(8, 197, 245))
+      background-image: linear-gradient(to right, rgb(48, 48, 49) , rgb(122, 125, 126));
     }
     .form-div{
       width:35%;
@@ -27,6 +27,7 @@
       margin-left: 28%;
       margin-top: 2%;
       margin-bottom: 9%;
+      color:white
   
     }
     .btn{
