--- a/views/addpass.ejs
+++ b/views/addpass.ejs
@@ -14,7 +14,7 @@
       <title> PassMan</title>
     <style>
       body{
-        background-image: linear-gradient(to right, rgb(14, 10, 247) , rgb(8, 197, 245))
+        background-image: linear-gradient(to right, rgb(48, 48, 49) , rgb(122, 125, 126));
       }
       .form-div{
         width:35%;
