--- a/views/customForm.ejs
+++ b/views/customForm.ejs
@@ -14,7 +14,7 @@
       <title> PassMan</title>
     <style>
       body{
-        background-image: linear-gradient(to right, rgb(14, 10, 247) , rgb(8, 197, 245))
+        background-image: linear-gradient(to right, rgb(48, 48, 49) , rgb(122, 125, 126));
       }
       .form-div{
         width:45%;
@@ -27,6 +27,7 @@
         margin-left: 25%;
         margin-top: 2%;
         margin-bottom: 4%;
+        color:white
     
       }
       .btn{
@@ -36,6 +37,9 @@
         color: white;
         margin-bottom: 10%;
         text-decoration: white;
+      }
+      label{
+        color:white
       }
       
   
