--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,68 +12,31 @@
       href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Asterisk.svg/819px-Asterisk.svg.png"
     />
       <title> PassMan</title>
-    <style>
-    #d1{
-      height: 665px;
-      background-color: red;
-      background-image: linear-gradient(#ffd600, #ffea00);
-      
-    }
-    .display-4{
-      color: #f57f17;
-      font-weight: bold;
-      text-align: center;
-    }
-    .lead{
-      color: rgb(121, 113, 104);
-    }
-    .jumbotron {
-      padding-bottom: 5vw;
-      border-bottom: 10px  solid black;
-    }
-      #bt1{
-      width: 100px;
-      background-color: #2196F3;
-      border: #2196F3;
-
-      }
-      #bt2{
-      width: 100px; 
-      background-color: #00c853;
-      border: #00c853
-
-      }
-      #about{
-        background-color: #f7ef9e;
-        width: 100%;
-        max-height: max-content;
-        text-align: center;
-      }
-    </style>
+      <link rel="stylesheet" type="text/css" href="/css/style.css" />
   </head>
   <body>
 	<!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="bootstrap/js/bootstrap.min.js"></script>
       <div id="d1">
         <div class="jumbotron jumbotron-fluid bg-dark">
-          <h1 class="display-4">Pass_Man</h1>
-          <p class="lead">This is simple website to manage your passwords.</p>
-          <p class="lead">Simplify untangable work of remembering passwords of tons of platforms and also generate highly random and secure password.</p>
+          <h1 class="display-4 name1">Pass_Man</h1>
+          <p class="lead description1">This is simple website to manage your passwords.</p>
+          <p class="lead description1">Simplify untangable work of remembering passwords of tons of platforms and also generate highly random and secure password.</p>
         </div>
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-          <div class="btn-group mr-2" role="group" aria-label="Second group">
-            <a id="bt1" type="button" class="btn btn-secondary" href="/signUp">Sign Up</a>
+          <div class="btn-group mr-2 mx-2 my-4" role="group" aria-label="Second group">
+            <a id="bt11" type="button" class="btn btn-secondary" href="/signUp">Sign Up</a>
           </div>
-          <div class="btn-group mr-2" role="group" aria-label="Second group">
+          <div class="btn-group mr-2 mx-2 my-4" role="group" aria-label="Second group">
             <a id="bt3" type="button" class="btn btn-info" href="/getpass">Get passwords</a>
           </div>
-          <div class="btn-group mr-2" role="group" aria-label="Second group">
+          <div class="btn-group mr-2 mx-2 my-4" role="group" aria-label="Second group">
             <a id="bt4" type="button" class="btn btn-primary" href="/addpass">Add password</a>
           </div>
-          <div class="btn-group mr-2" role="group" aria-label="Second group">
+          <div class="btn-group mr-2 mx-2 my-4" role="group" aria-label="Second group">
             <a id="bt5" type="button" class="btn btn-success" href="/genpass">Generate new Password</a>
           </div>
-          <div class="btn-group mr-2" role="group" aria-label="Second group">
+          <div class="btn-group mr-2 mx-2 my-4" role="group" aria-label="Second group">
             <a id="bt5" type="button" class="btn btn-success" href="/genCustom">Generate Custom Password</a>
           </div>
         </div>
