--- a/views/signInForm.ejs
+++ b/views/signInForm.ejs
@@ -12,40 +12,13 @@
       href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Asterisk.svg/819px-Asterisk.svg.png"
     />
       <title> PassMan</title>
-    <style>
-      body{
-        background-image: linear-gradient(to right, rgb(48, 48, 49) , rgb(122, 125, 126));
-      }
-      .form-div{
-        width:45%;
-        margin-left: 25%;
-        border-style: solid;
-        border-width: 3px;
-        border-radius: 10px;
-      }
-      h1{
-        margin-left: 42%;
-        margin-top: 2%;
-        margin-bottom: 4%;
-    
-      }
-      .btn{
-        margin-left: 40%;
-      }
-      small{
-        color: white;
-        margin-bottom: 10%;
-        text-decoration: white;
-      }
-      
-  
-      </style>
+      <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <title>PassMan</title>
   </head>
   <body>
-    <h1>Sign Up</h1>
+    <h1 id="heading66">Sign Up</h1>
     <form method="POST">
-      <div class="form-div">
+      <div class="form-div form-div66">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="firstName"><h4>FirstName</h4></label>
@@ -69,8 +42,8 @@
             <input type="password" class="form-control" name="confirmPass">
           </div>
           
-        <button type="submit" class="btn btn-primary" action='/signUp'>Sign in</button>
-        <small id="emailHelp" class="form-text"><strong>Note:--></strong> After signUp you will be redirected to the main page form where you can add and retrieve your passwords</small>
+        <button type="submit" class="btn btn-primary btn66" action='/signUp'>Sign in</button>
+        <small  id="small66" class="form-text"><strong>Note:--></strong> After signUp you will be redirected to the main page form where you can add and retrieve your passwords</small>
       </form>
     </div>
     <!-- Optional JavaScript -->
