--- a/views/addpass.ejs
+++ b/views/addpass.ejs
@@ -12,35 +12,12 @@
       href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Asterisk.svg/819px-Asterisk.svg.png"
     />
       <title> PassMan</title>
-    <style>
-      body{
-        background-image: linear-gradient(to right, rgb(48, 48, 49) , rgb(122, 125, 126));
-      }
-      .form-div{
-        width:35%;
-        margin-left: 30%;
-        border-style: solid;
-        border-width: 3px;
-        border-radius: 10px;
-      }
-      h1{
-        margin-left: 35%;
-        margin-top: 2%;
-        margin-bottom: 4%;
-    
-      }
-      .btn{
-        margin-left: 40%;
-        margin-bottom: 10%;
-      }
-      
-  
-      </style>
+      <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <title>PassMan</title>
   </head>
   <body>
-    <h1>Add new password</h1>
-    <div class="form-div">
+    <h1 id="heading22">Add new password</h1>
+    <div class="form-div11">
     <form method="POST" action='/mainpage/passwords/add'>
         <div class="form-group">
             <label for="email"><h4>Your Email</h4></label>
@@ -54,7 +31,7 @@
           <label for="value"><h4>Value</h4></label>
           <input type="password" class="form-control" name="value">
         </div>
-        <button type="submit" class="btn btn-primary">Add</button>
+        <button type="submit" class="btn btn-primary btn22">Add</button>
       </form>
     </div>
     <!-- Optional JavaScript -->
