--- a/views/logInForm.ejs
+++ b/views/logInForm.ejs
@@ -18,7 +18,7 @@
   <body>
     <h1 id="heading55">Get All of Your Saved Passwords</h1>
     <div class="form-div55">
-    <form method="POST" action='/mainpage/passwords/getallpass'>
+    <form method="POST" action='/logIn'>
         <div class="form-group">
           <label for="emailId"><h4><strong>Email</strong></h4></label>
           <input type="email" class="form-control" id="emailId" name="emailId" placeholder="email">
